# andon-for-llm-agents

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING-PACKS.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  INTEGRATION.ja.md  INTEGRATION.md  LICENSE  NOTICE  README.ja.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
examples/: claude-code-settings.json  demo-run.py  demo_meta_andon.py  demo_stages.py  demo_ui.py  minimal-setup.md
gotchas/: GOTCHA-001-human-error-stop.yaml  GOTCHA-002-four-artifact-close.yaml  GOTCHA-003-meta-andon-session-reset.yaml  GOTCHA-004-gate-gaming.yaml  GOTCHA-005-confidence-threshold-bypass.yaml  GOTCHA-006-andon-cord-fear.yaml  GOTCHA-007-fix-and-forget.yaml
hooks/: andon_cli.py  context_monitor.py  domain_classifier.py  gotcha_candidate.py  gotcha_registry.py  gotcha_surfacer.py  kaizen-learning-capture.sh  kaizen_classify.py  kaizen_core.py  kaizen_incident.py  kaizen_payload.py  meta_andon_guard.py  models.py  output_safety_guard.py  pack_loader.py  tps-andon-control.sh  tps-andon-posttool-guard.sh  tps-andon-pretool-guard.sh  tps-kaizen-runtime.py
rules/: 45-quality-driven-execution.md  70-kaizen-learning.md
tests/: test_analysis_paralysis.py  test_context_monitor.py  test_deviation_rules.py  test_gotcha_candidate.py  test_gotcha_registry.py  test_gotcha_surfacer.py  test_output_safety_guard.py  test_self_check.py
(+190 files in other folders)
